--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rohit | Premium Services</title>
+    <title>AR Content Lab | Premium Services</title>
     <style>
         /* --- PREMIUM CSS STYLING --- */
         :root {
@@ -159,7 +159,7 @@
 <body>
 
     <nav>
-        <a href="#" class="logo">Rohit<span>.Dev</span></a>
+        <a href="#" class="logo">AR Content<span> Lab</span></a>
         <div class="nav-links">
             <a href="#portfolio">Work</a>
             <a href="#services">Services</a>
@@ -233,7 +233,7 @@
     </div>
 
     <footer style="text-align: center; padding: 40px; color: var(--text-muted); font-size: 0.8rem;">
-        <p>&copy; 2025 Rohit. All Rights Reserved.</p>
+        <p>&copy; 2025 Rohith (AR Content Lab). All Rights Reserved.</p>
     </footer>
 
 </body>
