--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
     <nav>
         <a href="#" class="logo">AR Content<span> Lab</span></a>
         <div class="nav-links">
+            <a href="portfolio.html">My Portfolio</a>
             <a href="#portfolio">Work</a>
             <a href="#services">Services</a>
             <a href="#contact">Contact</a>
