--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     <a href="mailto:beginsroh010@gmail.com" class="hover:underline">beginsroh010@gmail.com</a>
                 </div>
 
-                <form action="https://https://formspree.io/f/mykebkow" method="POST" class="space-y-4 text-left">
+                <form action="https://formspree.io/f/mykebkow" method="POST" class="space-y-4 text-left">
                     <div>
                         <label class="block text-sm text-gray-400 mb-1">Your Name</label>
                         <input type="text" name="name" class="w-full bg-gray-800 border border-gray-700 rounded-lg p-3 text-white focus:outline-none focus:border-blue-500" placeholder="John Doe">
