--- a/index.html
+++ b/index.html
@@ -131,20 +131,20 @@
                 </div>
 
                 <form action="https://formspree.io/f/mykebkow" method="POST" class="space-y-4 text-left">
-                    <div>
-                        <label class="block text-sm text-gray-400 mb-1">Your Name</label>
-                        <input type="text" name="name" class="w-full bg-gray-800 border border-gray-700 rounded-lg p-3 text-white focus:outline-none focus:border-blue-500" placeholder="John Doe">
-                    </div>
-                    <div>
-                        <label class="block text-sm text-gray-400 mb-1">Your Email</label>
-                        <input type="email" name="email" class="w-full bg-gray-800 border border-gray-700 rounded-lg p-3 text-white focus:outline-none focus:border-blue-500" placeholder="john@example.com">
-                    </div>
-                    <div>
-                        <label class="block text-sm text-gray-400 mb-1">Project Details</label>
-                        <textarea name="message" rows="4" class="w-full bg-gray-800 border border-gray-700 rounded-lg p-3 text-white focus:outline-none focus:border-blue-500" placeholder="I need a website for..."></textarea>
-                    </div>
-                    <button type="submit" class="w-full bg-gradient-to-r from-blue-600 to-purple-600 text-white font-bold py-3 rounded-lg hover:opacity-90 transition">Send Message</button>
-                </form>
+    <div>
+        <label class="block text-sm text-gray-400 mb-1">Your Name</label>
+        <input type="text" name="name" required class="w-full bg-gray-800 border border-gray-700 rounded-lg p-3 text-white focus:outline-none focus:border-blue-500" placeholder="John Doe">
+    </div>
+    <div>
+        <label class="block text-sm text-gray-400 mb-1">Your Email</label>
+        <input type="email" name="email" required class="w-full bg-gray-800 border border-gray-700 rounded-lg p-3 text-white focus:outline-none focus:border-blue-500" placeholder="john@example.com">
+    </div>
+    <div>
+        <label class="block text-sm text-gray-400 mb-1">Project Details</label>
+        <textarea name="message" rows="4" required class="w-full bg-gray-800 border border-gray-700 rounded-lg p-3 text-white focus:outline-none focus:border-blue-500" placeholder="I need a website for..."></textarea>
+    </div>
+    <button type="submit" class="w-full bg-gradient-to-r from-blue-600 to-purple-600 text-white font-bold py-3 rounded-lg hover:opacity-90 transition">Send Message</button>
+</form>
             </div>
         </div>
     </section>
