--- a/index.html
+++ b/index.html
@@ -87,32 +87,35 @@
 
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <div class="group relative overflow-hidden rounded-xl border border-gray-700">
-                    <div class="h-48 bg-gray-800 flex items-center justify-center">
-                        <span class="text-4xl">☕</span> </div>
+                    <div class="h-48 bg-gray-800 flex items-center justify-center text-6xl">
+                        ☕
+                    </div>
                     <div class="p-6 bg-gray-800">
                         <h3 class="text-xl font-bold">Coffee Shop Theme</h3>
                         <p class="text-gray-400 text-sm mt-2 mb-4">Perfect for Cafes & Restaurants. Includes Menu & Location.</p>
-                        <a href="#" class="block text-center w-full bg-blue-600 hover:bg-blue-700 text-white py-2 rounded transition">View Demo</a>
+                        <a href="cafe.html" target="_blank" class="block text-center w-full bg-blue-600 hover:bg-blue-700 text-white py-2 rounded transition">View Demo</a>
                     </div>
                 </div>
 
                 <div class="group relative overflow-hidden rounded-xl border border-gray-700">
-                    <div class="h-48 bg-gray-800 flex items-center justify-center">
-                        <span class="text-4xl">💪</span> </div>
+                    <div class="h-48 bg-gray-800 flex items-center justify-center text-6xl">
+                        💪
+                    </div>
                     <div class="p-6 bg-gray-800">
                         <h3 class="text-xl font-bold">Fitness & Gym Theme</h3>
                         <p class="text-gray-400 text-sm mt-2 mb-4">Dark, bold design for Gyms and Personal Trainers.</p>
-                        <a href="#" class="block text-center w-full bg-purple-600 hover:bg-purple-700 text-white py-2 rounded transition">View Demo</a>
+                        <a href="gym.html" target="_blank" class="block text-center w-full bg-purple-600 hover:bg-purple-700 text-white py-2 rounded transition">View Demo</a>
                     </div>
                 </div>
 
-                <div class="group relative overflow-hidden rounded-xl border border-gray-700">
-                    <div class="h-48 bg-gray-800 flex items-center justify-center">
-                        <span class="text-4xl">🏢</span> </div>
+                <div class="group relative overflow-hidden rounded-xl border border-gray-700 opacity-70">
+                    <div class="h-48 bg-gray-800 flex items-center justify-center text-6xl">
+                        🏢
+                    </div>
                     <div class="p-6 bg-gray-800">
                         <h3 class="text-xl font-bold">Agency & Corporate</h3>
                         <p class="text-gray-400 text-sm mt-2 mb-4">Clean professional look for small businesses.</p>
-                        <a href="#" class="block text-center w-full bg-green-600 hover:bg-green-700 text-white py-2 rounded transition">View Demo</a>
+                        <button class="block w-full bg-gray-700 text-gray-400 py-2 rounded cursor-not-allowed">Coming Soon</button>
                     </div>
                 </div>
             </div>
@@ -131,20 +134,20 @@
                 </div>
 
                 <form action="https://formspree.io/f/mykebkow" method="POST" class="space-y-4 text-left">
-    <div>
-        <label class="block text-sm text-gray-400 mb-1">Your Name</label>
-        <input type="text" name="name" required class="w-full bg-gray-800 border border-gray-700 rounded-lg p-3 text-white focus:outline-none focus:border-blue-500" placeholder="John Doe">
-    </div>
-    <div>
-        <label class="block text-sm text-gray-400 mb-1">Your Email</label>
-        <input type="email" name="email" required class="w-full bg-gray-800 border border-gray-700 rounded-lg p-3 text-white focus:outline-none focus:border-blue-500" placeholder="john@example.com">
-    </div>
-    <div>
-        <label class="block text-sm text-gray-400 mb-1">Project Details</label>
-        <textarea name="message" rows="4" required class="w-full bg-gray-800 border border-gray-700 rounded-lg p-3 text-white focus:outline-none focus:border-blue-500" placeholder="I need a website for..."></textarea>
-    </div>
-    <button type="submit" class="w-full bg-gradient-to-r from-blue-600 to-purple-600 text-white font-bold py-3 rounded-lg hover:opacity-90 transition">Send Message</button>
-</form>
+                    <div>
+                        <label class="block text-sm text-gray-400 mb-1">Your Name</label>
+                        <input type="text" name="name" required class="w-full bg-gray-800 border border-gray-700 rounded-lg p-3 text-white focus:outline-none focus:border-blue-500" placeholder="John Doe">
+                    </div>
+                    <div>
+                        <label class="block text-sm text-gray-400 mb-1">Your Email</label>
+                        <input type="email" name="email" required class="w-full bg-gray-800 border border-gray-700 rounded-lg p-3 text-white focus:outline-none focus:border-blue-500" placeholder="john@example.com">
+                    </div>
+                    <div>
+                        <label class="block text-sm text-gray-400 mb-1">Project Details</label>
+                        <textarea name="message" rows="4" required class="w-full bg-gray-800 border border-gray-700 rounded-lg p-3 text-white focus:outline-none focus:border-blue-500" placeholder="I need a website for..."></textarea>
+                    </div>
+                    <button type="submit" class="w-full bg-gradient-to-r from-blue-600 to-purple-600 text-white font-bold py-3 rounded-lg hover:opacity-90 transition">Send Message</button>
+                </form>
             </div>
         </div>
     </section>
@@ -153,9 +156,6 @@
         <p>&copy; 2026 Rohith. All rights reserved.</p>
         <p>Designed with ❤️ & Code.</p>
     </footer>
-
-</body>
-</html>
 
 </body>
 </html>
