--- a/portfolio.html
+++ b/portfolio.html
@@ -113,7 +113,11 @@
     </style>
 </head>
 <body>
-
+    <nav style="padding: 20px; background-color: #161b22; border-bottom: 1px solid #30363d;">
+    <a href="index.html" style="color: #00ff41; text-decoration: none; font-weight: bold; font-size: 1.1rem;">
+        ← Back to Home
+    </a>
+    </nav>
     <div class="container">
         <header>
             <h1>Rohith A.</h1>
