--- a/index.html
+++ b/index.html
@@ -11,20 +11,21 @@
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap');
         body { font-family: 'Poppins', sans-serif; }
         .glass-effect {
-            background: rgba(255, 255, 255, 0.05);
+            background: rgba(17, 24, 39, 0.95); /* Darker background for visibility */
             backdrop-filter: blur(10px);
-            border: 1px solid rgba(255, 255, 255, 0.1);
+            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
         }
     </style>
 </head>
 <body class="bg-gray-900 text-white selection:bg-blue-500 selection:text-white">
 
-    <nav class="fixed w-full z-50 glass-effect border-b border-gray-800">
+    <nav class="fixed w-full z-50 glass-effect">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex items-center justify-between h-16">
                 <div class="flex-shrink-0">
                     <a href="#" class="text-2xl font-bold text-blue-400 tracking-wider">ROHITH<span class="text-white">.DEV</span></a>
                 </div>
+                
                 <div class="hidden md:block">
                     <div class="ml-10 flex items-baseline space-x-4">
                         <a href="#home" class="hover:text-blue-400 px-3 py-2 rounded-md text-sm font-medium transition">Home</a>
@@ -33,10 +34,26 @@
                         <a href="#showcase" class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-md text-sm font-medium transition">View Samples</a>
                     </div>
                 </div>
+
+                <div class="-mr-2 flex md:hidden">
+                    <button type="button" onclick="toggleMenu()" class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-white hover:bg-gray-700 focus:outline-none transition">
+                        <svg class="h-6 w-6" stroke="currentColor" fill="none" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+                        </svg>
+                    </button>
+                </div>
+            </div>
+        </div>
+
+        <div class="hidden md:hidden bg-gray-900 border-t border-gray-800" id="mobile-menu">
+            <div class="px-2 pt-2 pb-3 space-y-1 sm:px-3">
+                <a href="#home" class="text-gray-300 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Home</a>
+                <a href="#services" class="text-gray-300 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Services</a>
+                <a href="portfolio.html" class="text-blue-400 block px-3 py-2 rounded-md text-base font-medium">My Portfolio</a>
+                <a href="#showcase" class="bg-blue-600 text-white block px-3 py-2 rounded-md text-base font-medium">View Samples</a>
             </div>
         </div>
     </nav>
-
     <section id="home" class="h-screen flex items-center justify-center relative overflow-hidden">
         <div class="absolute top-0 left-0 w-full h-full bg-[url('https://images.unsplash.com/photo-1555066931-4365d14bab8c?q=80&w=2070&auto=format&fit=crop')] bg-cover bg-center opacity-10"></div>
         
@@ -157,6 +174,13 @@
         <p>&copy; 2026 Rohith. All rights reserved.</p>
         <p>Designed with ❤️ & Code.</p>
     </footer>
+
+    <script>
+        function toggleMenu() {
+            const menu = document.getElementById('mobile-menu');
+            menu.classList.toggle('hidden');
+        }
+    </script>
 
 </body>
 </html>
